--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -15,7 +15,7 @@
 <div class="container content-container">
 
 
-  <% if false %>
+  <% if true %>
     <div class="counters-container">
 
       <% cache @users_all do %>
