--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -132,6 +132,29 @@ header {
 	}
 }
 
+.header-title-2 {
+	position: absolute;
+	bottom: 150px;
+	left: 0;
+	right: 0;
+	z-index: 3;
+	font-family: 'Roboto Slab';
+	font-size: 48px;
+	font-weight: bold;
+	text-align: center;
+	color: #ffffff;
+	text-shadow: 0 4px 7px rgba(0, 0, 0, 0.27);
+
+	@media (max-width: 768px) {
+		margin: 80px 0 50px;
+		font-size: 36px;
+	}
+	@media (max-width: 480px) {
+		margin: 60px 0 40px;
+		font-size: 30px;
+	}
+}
+
 .header-buttons {
 	position: relative;
 	z-index: 3;
@@ -230,7 +253,7 @@ header {
 	text-transform: uppercase;
 }
 
-.top-banner{
+.top-banner {
 	padding: 5px 15px;
 	border: none !important;
 	border-radius: 0 !important;
@@ -238,10 +261,11 @@ header {
 	text-align: center;
 	line-height: 20px;
 
-	.btn-success{
-		border-color: rgba(0,0,0,.4);
+	.btn-success {
+		border-color: rgba(0, 0, 0, .4);
 	}
 }
-.top-banner-label{
+
+.top-banner-label {
 	margin-right: 32px;
 }
