--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -35,6 +35,10 @@
       <%= f.text_field(:votes) %>
     </div>
     <div class="form-group">
+      <%= label_tag(:rating, "Место:") %>
+      <%= f.text_field(:rating) %>
+    </div>
+    <div class="form-group">
       <%= f.submit 'Сохранить', :class => 'btn btn-success' %>
     </div>
   <% end %>
