--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -15,7 +15,7 @@
 <div class="container content-container">
 
 
-  <% if false %>
+  <% if true %>
     <div class="counters-container">
 
       <% cache @users_all do %>
@@ -76,11 +76,7 @@
   <% end %>
 
   <div class="home_top">
-    Победительницы конкурса
-  </div>
-
-  <div class="home_top-2">
-    МИСС ТУРИЗМ  2017
+    Финалистки конкурса
   </div>
 
   <div class="owl-carousel home-users">
