--- a/app/javascript/packs/_votes.scss
+++ b/app/javascript/packs/_votes.scss
@@ -15,22 +15,22 @@
 	}
 }
 
-.owl-carousel {
-
-	.anketa-item-img {
-		height: 652px;
-		overflow: hidden;
-
-		.img-responsive {
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			margin: auto;
-		}
-	}
-}
+//.owl-carousel {
+//
+//	.anketa-item-img {
+//		height: 652px;
+//		overflow: hidden;
+//
+//		.img-responsive {
+//			position: absolute;
+//			top: 0;
+//			bottom: 0;
+//			left: 0;
+//			right: 0;
+//			margin: auto;
+//		}
+//	}
+//}
 
 .user-disqualify {
 	position: absolute;
