--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -1,4 +1,4 @@
-.top-banner
+/.top-banner
   i.fa.fa-ticket
   |&nbsp;
   span.top-banner-label Продажа туров на финал конкурса красоты Мисс Туризм 2017 / 5-8 ноября, Кемер, Турция
