--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -158,9 +158,11 @@
 
   <%= link_to 'Все участницы', votes_path, class: "btn-votes" %>
 
-  <div class="home-subtitle">
-    Фотографии с конкурса
-  </div>
+  <%- if @user.photos.length > 0 %>
+    <div class="home-subtitle">
+      Фотографии с конкурса
+    </div>
+  <% end %>
 
   <% if user_signed_in? && policy(current_user).index? %>
     <%- if @user.present? %>
@@ -172,6 +174,17 @@
                 <%= image_tag photo.photo_src.large, class: "img-responsive" %>
               </div>
             </div>
+            <%= link_to members_photo_gallery_path(@user, photo),
+                        method: :delete,
+                        class: 'btn btn-default btn-xs',
+                        title: "Удалить фотографию",
+                        data: {
+                            toggle: "tooltip",
+                            placement: "top",
+                            confirm: 'Вы уверенны что хотите удалить эту фотографию?'
+                        } do %>
+              <i class="fa fa-trash-o profile-photo-delete-icon"></i>
+            <% end %>
           </div>
         <% end %>
       </div>
