--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -50,14 +50,22 @@
 		margin: 0 auto 30px;
 
 		.anketa-item-img {
+			position: relative;
 			height: 800px;
 			overflow: hidden;
 
-			img{
+			img {
+				position: absolute;
+				left: 50%;
+				right: 0;
+				top: 0;
+				bottom: 0;
 				width: auto;
-				min-width: 100%;
+				//min-width: 100%;
 				max-width: none;
-				min-height: 100%;
+				height: 100%;
+				//margin: auto;
+				transform: translateX(-50%);
 			}
 		}
 
