--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -164,35 +164,41 @@
     </div>
   <% end %>
 
-  <% if user_signed_in? && policy(current_user).index? %>
-    <%- if @user.present? %>
-      <div class="owl-carousel home-users gallery-home">
-        <%- @user.photos.each do |photo| %>
-          <div class="home-users-item">
-            <div class="anketa-item">
-              <div class="anketa-item-img">
-                <%= image_tag photo.photo_src.large, class: "img-responsive" %>
-              </div>
-            </div>
-            <%= link_to members_photo_gallery_path(@user, photo),
-                        method: :delete,
-                        class: 'btn btn-default btn-xs',
-                        title: "Удалить фотографию",
-                        data: {
-                            toggle: "tooltip",
-                            placement: "top",
-                            confirm: 'Вы уверенны что хотите удалить эту фотографию?'
-                        } do %>
-              <i class="fa fa-trash-o profile-photo-delete-icon"></i>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
 
+  <%- if @user.present? %>
+    <div class="owl-carousel home-users gallery-home">
+      <%- @user.photos.each do |photo| %>
+        <div class="home-users-item">
+          <div class="anketa-item">
+            <div class="anketa-item-img">
+              <%= image_tag photo.photo_src.large, class: "img-responsive" %>
+            </div>
+          </div>
+
+          <% if user_signed_in? && policy(current_user).index? %>
+            <div class="text-center" style="margin-top: 16px">
+              <%= link_to members_photo_gallery_path(@user, photo),
+                          method: :delete,
+                          class: 'btn btn-default btn-lg',
+                          title: "Удалить фотографию",
+                          data: {
+                              toggle: "tooltip",
+                              placement: "top",
+                              confirm: 'Вы уверенны что хотите удалить эту фотографию?'
+                          } do %>
+                <i class="fa fa-trash-o profile-photo-delete-icon"></i>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+
+  <% if user_signed_in? && policy(current_user).index? %>
     <h4>Загрузите фотографии</h4>
     <%= simple_form_for @user, :url => members_upload_galery_path, :method => :post do |f| %>
-      <%= f.file_field :photo_src %>
+      <%= f.file_field :photo_src, multiple: true %>
       <br>
       <%= f.button :button, class: "btn btn-success btn-lg" do %>
         Загрузить
