--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -131,7 +131,7 @@
     </div>
   </div>
 
-  <div class="home-subtitle">
+  <div class="home-subtitle" style="margin-top: 30px">
     Финалистки конкурса
   </div>
 
