--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -170,7 +170,7 @@
       <%- @user.photos.each do |photo| %>
         <div class="home-users-item">
           <div class="anketa-item">
-            <div class="anketa-item-img">
+            <div class="anketa-item-img img_gallery">
               <%= image_tag photo.photo_src.large, class: "img-responsive" %>
             </div>
           </div>
