--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -8,7 +8,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
   == render 'header/navigation'
   - if request.fullpath === '/'
     /h1.header-title Голосуй за Мисс Туризм!
-    /h1.header-title-2 Мисс Туризм Россия 2017!
+    h1.header-title Мисс Туризм Россия 2017!
     /- if user_signed_in?
       .header-buttons
         - if current_user.gender != 'male' && policy(current_user).edit?
