адптировал под мобильные https://trello.com/c/05x4XDi1/1-%D0%B0%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D1%82%D1%8C-%D0%BF%D0%BE%D0%B4-%D0%BC%D0%BE%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5-%D1%83%D1%81%D1%82%D1%80%D0%BE%D0%B9%D1%81%D1%82%D0%B2%D0%B0-%D0%B0%D0%BB%D1%8C%D0%B1%D0%BE%D0%BC

--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -103,7 +103,8 @@
 .gallery-home {
 	&.owl-carousel {
 		.anketa-item-img {
-			height: 772px;
+			//height: 772px;
+			padding-top: 67%;
 		}
 	}
 	.anketa-item {
