--- a/deploy/roles/nginx/templates/nginx-http.j2
+++ b/deploy/roles/nginx/templates/nginx-http.j2
@@ -7,62 +7,5 @@ upstream mysite {
 server {
     listen 80 default_server;
     server_name {{ domain_name }};
-
-    root {{ app_path }}/current/public;
-        # root /var/www/{{ domain_name }};
-        # index index.html index.htm;
-
-        location ~ ^/(assets|packs)/ {
-              expires max;
-              gzip_static on;
-              gzip_vary on;
-              add_header Cache-Control public;
-              break;
-        }
-
-        location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|jpg|jpeg|gif|png|ico|js)$ {
-          expires max;
-          gzip_static on;
-          gzip_vary on;
-          add_header Cache-Control public;
-          break;
-        }
-
-        location ~ ^/uploads/ {
-          expires max;
-          gzip_static on;
-          gzip_vary on;
-          add_header Cache-Control public;
-          break;
-        }
-
-        location ~ ^/system/ {
-            expires max;
-            gzip_static on;
-            gzip_vary on;
-            add_header Cache-Control public;
-            break;
-        }
-
-        location / {
-            proxy_pass http://mysite; # match the name of upstream directive which is defined above
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location ~ ^/(500|404|422).html {
-            root {{ app_path }}/current/public;
-        }
-
-
-        error_page 500 502 503 504 /500.html;
-        error_page 404 /404.html;
-        error_page 422 /422.html;
-
-        client_max_body_size 4G;
-        keepalive_timeout 10;
-
-        #location / {
-        #    try_files $uri $uri/ =404;
-        #}
+    rewrite ^ https://{{ domain_name }}$request_uri? permanent;
 }
