--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -76,6 +76,14 @@
   <% end %>
 
   <div class="home_top">
+    Видео
+  </div>
+
+  <div>
+    <iframe style="width: 100%; height: 80vh" src="https://www.youtube.com/embed/2xFKbAbrhFA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
+
+  <div class="home_top">
     Победительницы конкурса
   </div>
 
