В главном меню также добавить пункт "Видео" и "Победительницы" (пункты должны расположены в том порядке как они на странице)

--- a/app/views/header/_nav_links_for_auth.html.erb
+++ b/app/views/header/_nav_links_for_auth.html.erb
@@ -1,10 +1,12 @@
 <ul class="nav navbar-nav navbar-right">
   <% if request.fullpath === '/' %>
-    <!--
+
     <li>
-      <%= link_to "О КОНКУРСЕ", '#about' %>
+      <%= link_to "ВИДЕО", '#video' %>
     </li>
-    -->
+    <li>
+      <%= link_to "Победительницы", '#top' %>
+    </li>
     <li>
       <%= link_to "ЖЮРИ", '#jury' %>
     </li>
