--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -75,7 +75,7 @@
 
   <% end %>
 
-  <div class="home_top">
+  <div class="home_top" id="video">
     Видео
   </div>
 
@@ -83,7 +83,7 @@
     <iframe style="width: 100%; height: 80vh" src="https://www.youtube.com/embed/2xFKbAbrhFA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 
-  <div class="home_top">
+  <div class="home_top" id="top">
     Победительницы конкурса
   </div>
 
