В шапке нужно сделать пункт "фотографии" и переход на раздел фотографии с конкурса

--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -167,7 +167,7 @@
   <%= link_to 'Все участницы', votes_path, class: "btn-votes" %>
 
   <%- if @user.photos.length > 0 %>
-    <div class="home-subtitle">
+    <div id="photos" class="home-subtitle">
       Фотографии с конкурса
     </div>
   <% end %>
