--- a/app/views/header/_nav_links_for_auth.html.erb
+++ b/app/views/header/_nav_links_for_auth.html.erb
@@ -8,6 +8,9 @@
       <%= link_to "Победительницы", '#top' %>
     </li>
     <li>
+      <%= link_to "фотографии", '#photos' %>
+    </li>
+    <li>
       <%= link_to "ЖЮРИ", '#jury' %>
     </li>
   <% end %>
