--- a/deploy/roles/nginx/templates/nginx-http.j2
+++ b/deploy/roles/nginx/templates/nginx-http.j2
@@ -7,5 +7,16 @@ upstream mysite {
 server {
     listen 80 default_server;
     server_name {{ domain_name }};
-    rewrite ^ https://{{ domain_name }}$request_uri? permanent;
+
+
+    location /.well-known/acme-challenge {
+        root /var/www/letsencrypt;
+        try_files $uri $uri/ =404;
+    }
+
+    location / {
+      rewrite ^ https://{{ domain_name }}$request_uri? permanent;
+    }
+
+    #rewrite ^ https://{{ domain_name }}$request_uri? permanent;
 }
