--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -6,16 +6,16 @@
 <%- end %>
 
 <%= render partial: "shared/meta_og",
-           locals: {title: meta_title,
-                    desc: meta_desc,
-                    photo: nil
+           locals:  {title: meta_title,
+                     desc:  meta_desc,
+                     photo: nil
            }
 %>
 
 <div class="container content-container">
 
 
-  <% if false %>
+  <% if true %>
     <div class="counters-container">
 
       <% cache @users_all do %>
@@ -50,31 +50,32 @@
       <% end %>
 
       <div class="counter">
-        <!--
-      <div class="counter-items">
-        <%- ("2017-10-31".to_date - Date.current).numerator.to_s.split('').each do |item| %>
-          <div class="counter-item">
-            <%= item %>
+        <div class="counter-items">
+          <%- ("2018-10-31".to_date - Date.current).numerator.to_s.split('').each do |item| %>
+            <div class="counter-item">
+              <%= item %>
+            </div>
+          <% end %>
+          <div class="counter-item-label">
+            дней
           </div>
-        <% end %>
-        <div class="counter-item-label">
-          дней
         </div>
-      </div>
-      <div class="counter-label">
-        до окончания голосования
-      </div>
-      -->
+        <div class="counter-label">
+          до окончания регистрации
+        </div>
+        <!--
         <div class="counter-label">
           <br>
           Подсчет голосов завершен
         </div>
+        -->
       </div>
 
     </div>
 
   <% end %>
 
+  <!--
   <div class="home_top" id="video">
     Видео
   </div>
@@ -82,6 +83,10 @@
   <div>
     <iframe style="width: 100%; height: 80vh" src="https://www.youtube.com/embed/2xFKbAbrhFA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
+
+  -->
+
+  <%- if false %>
 
   <div class="home_top" id="top">
     Победительницы конкурса
@@ -139,6 +144,7 @@
     </div>
   </div>
 
+
   <div class="home-subtitle" style="margin-top: 30px">
     Финалистки конкурса
   </div>
@@ -166,52 +172,57 @@
 
   <%= link_to 'Все участницы', votes_path, class: "btn-votes" %>
 
-  <%- if @user.photos.length > 0 %>
-    <div id="photos" class="home-subtitle">
-      Фотографии с конкурса
-    </div>
   <% end %>
 
+  <%- if false %>
+    <%- if @user.photos.length > 0 %>
+      <div id="photos" class="home-subtitle">
+        Фотографии с конкурса
+      </div>
+    <% end %>
 
-  <%- if @user.present? %>
-    <div class="owl-carousel home-users gallery-home">
-      <%- @user.photos.each do |photo| %>
-        <div class="home-users-item">
-          <div class="anketa-item">
-            <div class="anketa-item-img img_gallery">
-              <img class="img-responsive owl-lazy" data-src="<%= photo.photo_src.large %>" />
+
+    <%- if @user.present? %>
+      <div class="owl-carousel home-users gallery-home">
+        <%- @user.photos.each do |photo| %>
+          <div class="home-users-item">
+            <div class="anketa-item">
+              <div class="anketa-item-img img_gallery">
+                <img class="img-responsive owl-lazy" data-src="<%= photo.photo_src.large %>" />
+              </div>
             </div>
+
+            <% if user_signed_in? && policy(current_user).index? %>
+              <div class="text-center" style="margin-top: 16px">
+                <%= link_to members_photo_gallery_path(@user, photo),
+                            method: :delete,
+                            class:  'btn btn-default btn-lg',
+                            title:  "Удалить фотографию",
+                            data:   {
+                                toggle:    "tooltip",
+                                placement: "top",
+                                confirm:   'Вы уверенны что хотите удалить эту фотографию?'
+                            } do %>
+                  <i class="fa fa-trash-o profile-photo-delete-icon"></i>
+                <% end %>
+              </div>
+            <% end %>
           </div>
+        <% end %>
+      </div>
+    <% end %>
 
-          <% if user_signed_in? && policy(current_user).index? %>
-            <div class="text-center" style="margin-top: 16px">
-              <%= link_to members_photo_gallery_path(@user, photo),
-                          method: :delete,
-                          class: 'btn btn-default btn-lg',
-                          title: "Удалить фотографию",
-                          data: {
-                              toggle: "tooltip",
-                              placement: "top",
-                              confirm: 'Вы уверенны что хотите удалить эту фотографию?'
-                          } do %>
-                <i class="fa fa-trash-o profile-photo-delete-icon"></i>
-              <% end %>
-            </div>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-  <% end %>
-
-  <% if user_signed_in? && policy(current_user).index? %>
-    <h4>Загрузите фотографии</h4>
-    <%= simple_form_for @user, :url => members_upload_galery_path, :method => :post do |f| %>
-      <%= f.file_field :photo_src, multiple: true %>
-      <br>
-      <%= f.button :button, class: "btn btn-success btn-lg" do %>
-        Загрузить
+    <% if user_signed_in? && policy(current_user).index? %>
+      <h4>Загрузите фотографии</h4>
+      <%= simple_form_for @user, :url => members_upload_galery_path, :method => :post do |f| %>
+        <%= f.file_field :photo_src, multiple: true %>
+        <br>
+        <%= f.button :button, class: "btn btn-success btn-lg" do %>
+          Загрузить
+        <% end %>
       <% end %>
     <% end %>
+
   <% end %>
 
 
@@ -325,7 +336,7 @@
     </div>
   -->
 
-  <!--
+
   <%- unless user_signed_in? %>
     <div class="home-action">
       <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal">
@@ -334,7 +345,6 @@
       </button>
     </div>
   <% end %>
--->
 
   <div class="home-subtitle jury-list-title" id="jury">
     Жюри конкурса
